// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card> renders Card with a shadow 1`] = `
<div
  className="Van-Card Van-Card--withShadow"
>
  My card
</div>
`;

exports[`<Card> renders default Card 1`] = `
<div
  className="Van-Card"
>
  My card
</div>
`;

exports[`<Card> renders with specific attributes 1`] = `
<div
  className="Van-Card"
  data-id="0"
>
  My card
</div>
`;

exports[`<Card> renders with specific className 1`] = `
<div
  className="Van-Card my-class"
>
  My card
</div>
`;
